#
# Packaging
#

[tool.poetry]
name = "pyrobud"
version = "2.6.4"
description = "A clean selfbot for Telegram with an emphasis on quality and practicality. Modernized with Python 3.14."
authors = [
    "Danny Lin <danny@kdrag0n.dev>",
    "Bluscream <Bluscream@users.noreply.github.com>",
    "Cursor.AI (AI Assistant)"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Bluscream/pyrobud"
documentation = "https://github.com/Bluscream/pyrobud/blob/main/README.md"
packages = [
    { include = "pyrobud" }
]
include = [
    "pyrobud/custom_modules/**/*.py",
]

# Search info
keywords = ["chat", "telegram", "selfbot", "telegram-bot", "telethon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Bluscream/pyrobud/issues"
"Community" = "https://t.me/pyrobud"
"Original Project" = "https://github.com/kdrag0n/pyrobud"
"Docker Hub" = "https://hub.docker.com/r/bluscream1/pyrobud"
"GitHub Packages" = "https://github.com/Bluscream/pyrobud/pkgs/container/pyrobud"

[tool.poetry.dependencies]
python = "^3.11"

# Core
aiohttp = "^3.13.0"
colorlog = "^6.10.0"
telethon = "^1.41.0"
tomlkit = "^0.13.0"
# Performance
cryptg = {version = "^0.5.0", optional = true}
# Database
msgpack = "^1.1.0"
plyvel = "^1.5.0"
# Error handling
gitpython = "^3.1.0"
ratelimit = "^2.2.1"
sentry-sdk = "^2.43.0"
# Stickers module
pillow = "^12.0.0"
# System module
speedtest-cli = "^2.1.3"
# Debug module
meval = "^2.5"
aiorun = "^2025.1.0"
beauty-print = "^0.6.0"
emoji = "^2.15.0"
regex = "^2025.11.3"

[tool.poetry.extras]
fast = ["cryptg"]

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = {version = "^5.13.0", extras = ["pyproject"]}

mypy = "^1.18.0"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
pyrobud = "pyrobud.main:main"


#
# Code formatting
#

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


#
# Build system (for pip)
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
